# machinery

./: .audit-ignores  .editorconfig  .gitattributes  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GATES.md  Justfile  LICENSE  QUALITY_BACKLOG.md  README.md  SECURITY.md  TEAM.md  audit.toml  deny.toml  package.json  release-train.yaml  trigger.config.ts  tsconfig.json
build-depot/: .gitignore  AGENTS.md  Justfile  QUALITY_BACKLOG.md  README.md  build-depot.pg  cluster.yaml  factory-cohorts.json
chart-room/: CONTRIBUTING.md  How This Works.md
chart-room/strategic/validator/: Cargo.toml  Justfile  build.rs  deny.toml  rust-toolchain.toml
chart-room/strategic/validator/src/: ack.rs  audit.rs  delivery.rs  detector.rs  digest.rs  fingerprint.rs  idempotency.rs  main.rs  policy_engine.rs  reliability.rs  routing.rs  routing_config.rs  sla.rs  slack.rs  thresholds.rs
chart-room/strategic/validator/tests/: integration_test.rs  semantic_tests.rs
commerce-rails/: AGENTS.md  Cargo.toml  Justfile  MILESTONES.md  QUALITY_BACKLOG.md  clippy.toml
commerce-rails/.cargo/: config.toml
commerce-rails/.github/workflows/: ci.yml
commerce-rails/crates/commerce-rails-contracts/src/: lib.rs
commerce-rails/crates/commerce-rails-stripe/tests/: entitlement_store.rs
commerce-rails/docs/strategy/: quorum-sense-substrate-scoping.md  reflective-paradigm.md
commerce-rails/docs/superpowers/plans/: 2026-06-08-plan-4-labs-entitlement-store.md
commerce-rails/kb/: INDEX.md  LOG.md
commerce-rails/kb/03-commerce/: README.md
commerce-rails/kb/Adapters/: Stripe Connect Boundary.md
commerce-rails/kb/Architecture/: Executable Command Safety.md  Operating Authority Boundary.md  Rail Terminology.md  Runtime Runway Commerce Rails Boundary.md
commerce-rails/kb/Contracts/: Apps Consuming Commerce Rails.md  Marquee App Seam.md
commerce-rails/scripts/ci/: checkout-reflective-siblings.sh
contracts/: README.md  development.md  marketing.md  phase-gates.md  retrospective.md  review.md
crates/commerce-rails-contracts/: Cargo.toml
crates/commerce-rails-stripe/: Cargo.toml
crates/commerce-rails-stripe/src/: lib.rs
crates/runway-ambient/: Cargo.toml  README.md
crates/runway-ambient/src/: config.rs  error.rs  handler.rs  lib.rs  pubsub.rs  queue.rs
crates/runway-ambient/tests/: ambient_quorum_test.rs
evals/: README.md  ethics-safety-eval.md  founder-eval.md  investor-eval.md  marketing-lead-eval.md  qa-engineer-eval.md  run-eval.sh  run-suite.sh  security-auditor-eval.md  skeptical-critic-eval.md  sre-operations-eval.md  sustainability-eval.md  system-architect-eval.md
forge-templates/: AGENTS.md  Justfile  README.md  VENDORED.md
forge-templates/converge-engagement/: .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  MILESTONES.md  README.md  _ARCHIVED.md
forge-templates/converge-engagement/crates/{{project}}-app/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-app/src/: lib.rs
forge-templates/converge-engagement/crates/{{project}}-domain/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-domain/src/: lib.rs
forge-templates/converge-engagement/crates/{{project}}-kernel/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-kernel/src/: lib.rs
forge-templates/converge-engagement/crates/{{project}}-platform/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-platform/src/: lib.rs
forge-templates/converge-engagement/crates/{{project}}-server/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-server/src/: main.rs
forge-templates/converge-engagement/crates/{{project}}-truths/: Cargo.toml
forge-templates/converge-engagement/crates/{{project}}-truths/src/: lib.rs
forge-templates/converge-engagement/kb/: Home.md  INDEX.md  LOG.md
forge-templates/converge-extension/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
forge-templates/converge-extension/.github/workflows/: ci.yml  coverage.yml  security.yml  stability.yml
forge-templates/converge-extension/kb/: Home.md  INDEX.md
forge-templates/converge-extension/kb/Architecture/: Surface.md
forge-templates/converge-extension/kb/Building/: Getting Started.md
forge-templates/converge-extension/kb/History/: CHANGELOG.md
forge-templates/converge-extension/kb/Planning/: MILESTONES.md
forge-templates/converge-extension/scripts/: append-recipes.sh  apply-checklist.sh  release-recipes.just
kb/: Home.md  INDEX.md
queries/: check_runs_by_repo.gq  deployments_by_repo.gq  open_by_bucket.gq  open_findings.gq  open_incidents.gq  prs_by_finding.gq  repo_health.gq  repository_adoption.gq  scorecard_signals.gq  scorecard_standards.gq  signals_by_category.gq
runtime-runway/crates/runway-app-host/: Cargo.toml
runtime-runway/crates/runway-app-host/src/: approvals.rs  builder.rs  lib.rs
runtime-runway/crates/runway-app-host/tests/: helm_session_sse_test.rs
runtime-runway/crates/runway-app-shell/: Cargo.toml
runtime-runway/crates/runway-app-shell/src/: auth.rs  lib.rs  widget.rs
runtime-runway/crates/runway-storage/: Cargo.toml
runtime-runway/crates/runway-storage/src/: http.rs
runtime-runway/crates/runway-storage/src/embedding/: vertex.rs
runtime-runway/crates/runway-storage/src/local/: lease.rs  mod.rs  sync.rs
runtime-runway/crates/runway-storage/src/remote/: document.rs  mod.rs
runtime-runway/crates/runway-storage/src/traits/: event.rs  mod.rs
runtime-runway/crates/runway-storage/tests/: contract_emulator.rs  contract_local.rs
runtime-runway/crates/runway-telemetry/: Cargo.toml
runtime-runway/crates/runway-telemetry/src/: lib.rs
strategic/validator/: Cargo.toml  build.rs
strategic/validator/cedar/: entities.json  schema.cedarschema
strategic/validator/cedar/policies/: authority-rules.cedar  foundation.cedar
strategic/validator/reports/digest/: 2026-05.json  2026-05.md
strategic/validator/src/: digest.rs  fingerprint.rs  lib.rs  main.rs  metrics.rs  policy_engine.rs  routing.rs  routing_config.rs  slack.rs
(+528 files in other folders)
