[workspace]
resolver = "2"
members = [
    "crates/commerce-rails-contracts",
    "crates/commerce-rails-stripe",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/commerce-rails"
publish = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
# RP-HERMETIC-UNIT (Reflective QUALITY_BACKLOG.md → QF-2026-06-02-05):
# denies `reqwest::Client::new` / `reqwest::blocking::Client::new` /
# `::builder` so unit tests can't accidentally hit the network. The
# disallowed-methods list lives in `clippy.toml` at the workspace root.
# Production callsites and test helpers either use a DI constructor
# (see Reflective KB standard `hermetic-unit-tests.md`) or annotate the
# construction with `#[allow(clippy::disallowed_methods)]` + a
# justification comment. Set to `deny` 2026-06-07 — commerce-rails-stripe's
# `CommerceRails::new(client, config)` was already DI-ready; the test
# helper `rails()` annotates its default-client sentinel inline.
disallowed_methods = "deny"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
reqwest = { version = "0.13", features = ["json", "form", "query"] }
# QF-CR-03: persistent EntitlementStore over runway-storage::DocumentStore.
# Path dep on sibling repo (see workspace layout — same pattern marquee-apps use
# for bedrock-platform/converge). Pulls the full StorageKit (local redb +
# remote Firestore backends); CR uses only the DocumentStore surface.
runway-storage = { path = "../runtime-runway/crates/runway-storage", version = "3.6.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
