[package]
name = "commerce-rails-stripe"
description = "Stripe adapter for the Reflective Commerce Rails layer. Implements the billing, subscription, and webhook contracts from commerce-rails-contracts against the Stripe HTTP API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "commerce_rails_stripe"
path = "src/lib.rs"

[dependencies]
commerce-rails-contracts = { path = "../commerce-rails-contracts", version = "0.2.2" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hmac.workspace = true
reqwest.workspace = true
runway-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
