[workspace]
resolver = "2"
members = [
    # "crates/{{extension}}",
    # "crates/{{extension}}-something",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/{{extension}}"

[workspace.dependencies]
# Converge contracts (foundation)
converge-pack         = "3.8.1"
converge-model        = "3.8.1"
converge-provider-api = "3.8.1"
converge-kernel       = "3.8.1"

# Common deps
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow     = "1"
thiserror  = "2"
tracing    = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
