[package]
name = "strategy-validator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Validate strategy gate fixtures against JSON schemas"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
cedar-policy = "4.8.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
failsafe = "1.3"
git2 = "0.19"
governor = "0.7"
jsonschema = "0.18"
lettre = { version = "0.11.19", features = ["smtp-transport", "tokio1-native-tls", "builder", "pool"] }
metrics = "0.24"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
serde_json = "1.0"
