[package]
name = "strategy-validator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Validate strategy gate fixtures against JSON schemas"

[lints.rust]
unsafe_code = "forbid"

# Lint policy aligned to the Build-Depot fleet baseline (mirrors
# runtime-runway [workspace.lints.clippy]). Build-Depot decides the rule;
# this project adopts it so `just lint` (-D warnings) gives the same verdict
# across every Rust project in machinery. Onboarded 2026-07-10 (QF-2026-07-10-02).
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
ignore_without_reason = "allow"
unnecessary_wraps = "allow"
single_match_else = "allow"
semicolon_if_nothing_returned = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
cedar-policy = "4.8.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
failsafe = "1.3"
git2 = "0.21"
governor = "0.7"
jsonschema = "0.18"
lettre = { version = "0.11.19", features = ["smtp-transport", "tokio1-native-tls", "builder", "pool"] }
metrics = "0.24"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
serde_json = "1.0"
