[package]
name = "runway-storage"
description = "Shared storage abstraction for Runtime Runway apps — local (redb + local FS + fastembed) and remote (Firestore + GCS + Vertex AI)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Belt-and-braces: fastembed downloads ~80 MB of ONNX weights into a
# crate-local cache when tests run. Never publish that. The repo's
# .gitignore catches it for git; this catches it for cargo package.
# Anchor: QF-2026-06-02-09 in the workspace quality backlog.
exclude = [
    ".fastembed_cache/",
    "**/.fastembed_cache/",
    "*.onnx",
    "*.safetensors",
]

[dependencies]
# RP-LAYERING (RFL-171): event ledger and lease/session-ownership contracts
# now live in this neutral substrate crate; runway-storage implements the
# traits and re-exports them so callers see no breakage.
helm-event-substrate = { git = "ssh://git@github.com/Reflective-Lab/bedrock-platform", tag = "v4.0.1", default-features = false }
runway-secrets = { path = "../runway-secrets", version = "3.4.2" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
chrono = { workspace = true }
fastembed = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
redb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
runway-storage-contract = { path = "../runway-storage-contract" }
futures = { workspace = true }
tempfile = "3"

[features]
default = ["local", "remote"]
local  = []
remote = []
