[package]
name = "runway-telemetry"
description = "OpenTelemetry + Sentry + structured logging bootstrap for all Runtime Runway services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

# Sentry is part of the Runtime Runway developer-support contract. Binaries
# that must opt out temporarily can use `default-features = false`, but
# production startup still fails when Sentry is unavailable or unconfigured.
sentry = { workspace = true, optional = true }
sentry-tracing = { version = "0.33", optional = true }

[features]
default = ["sentry"]
sentry = ["dep:sentry", "dep:sentry-tracing"]
