[package]
name = "{{project}}-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
{{project}}-domain = { path = "../{{project}}-domain" }
{{project}}-kernel = { path = "../{{project}}-kernel" }
{{project}}-truths = { path = "../{{project}}-truths" }
{{project}}-platform = { path = "../{{project}}-platform" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Re-enable when {{project}}-platform exposes `platform-local` again:
# platform-local = ["{{project}}-platform/platform-local"]

[lints]
workspace = true
